--- a/src/Makefile
+++ b/src/Makefile
@@ -3,6 +3,9 @@
 PROGRAM = hub.com
 
 #DOCKER_IMAGE = fr3nd/sdcc:3.8.0-1
+#AS = docker run -it --rm -v $$(pwd):/usr/src -u $$(id -u):$$(id -g) ${DOCKER_IMAGE} sdasz80
+#CC = docker run -it --rm -v $$(pwd):/usr/src -u $$(id -u):$$(id -g) ${DOCKER_IMAGE} sdcc
+#HEX2BIN = docker run -it --rm -v $$(pwd):/usr/src -u $$(id -u):$$(id -g) ${DOCKER_IMAGE} hex2bin
 AS = sdasz80
 CC = sdcc
 HEX2BIN = hex2bin
